--- a/src/pages/pubs.astro
+++ b/src/pages/pubs.astro
@@ -402,6 +402,19 @@ import Background from "../components/Background.astro";
             "Handika, H.",
             "Rowe, K.C.",
             "Achmadi, A.S.",
+            "Zulkurnia Irsaf",
+            "Swanson, M. T.",
+            "Esselstyn, J.A",
+          ]}
+          year="In prep"
+          title="An island of islands: complex gene tree discordance and local endemism on a recent, rapid rodent radiation on Sulawesi"
+          journal=""
+        />
+        <Forthcoming
+          authors={[
+            "Handika, H.",
+            "Rowe, K.C.",
+            "Achmadi, A.S.",
             "Swanson, M. T.",
             "Esselstyn, J.A",
           ]}
