Move outreach and teaching to cv pages.

--- a/src/components/Background.astro
+++ b/src/components/Background.astro
@@ -10,8 +10,8 @@ const backgroundClasses = cntl`
     -z-10
     transform-gpu
     overflow-hidden
-    blur-lg
-    opacity-40
+    blur-xl
+    opacity-20
     mt-16
 `;
 ---
