--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -6,11 +6,9 @@ import CloseMenuButton from "./buttons/CloseMenuButton.astro";
 const navItems = [
   { path: "/", label: "About" },
   { path: "/projects", label: "Projects" },
-  { path: "/pubs", label: "Publications" },
+  { path: "/cv", label: "CV" },
   { path: "/software", label: "Software" },
   { path: "/fieldwork", label: "Fieldwork" },
-  { path: "/teaching", label: "Teaching" },
-  { path: "/outreach", label: "Outreach" },
 ];
 
 const currentPath = Astro.url.pathname;
