--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -27,7 +27,7 @@ const activeLinkClasses = cntl`
   dark:bg-porsche-800
   rounded-full
   text-porsche-600
-  dark:text-porsche-200
+  dark:text-porsche-100
   font-semibold
   px-4
 `;
@@ -60,21 +60,19 @@ const inactiveLinkClasses = cntl`
 `;
 
 const mobileMenuClasses = cntl`
-  lg:hidden
+  hidden
 `;
 
 const mobileLinkClasses = cntl`
-  -mx-3
   block
-  rounded-lg
-  px-3
+  px-4
   py-2
+  hover:text-porsche-600
+  dark:hover:text-porsche-300
   text-base/7
-  hover:text-porsche-500
 `;
 
 const mobileMenuPanelClasses = cntl`
-  fixed
   bg-porsche-200
   dark:bg-porsche-950
   inset-y-0
@@ -87,6 +85,11 @@ const mobileMenuPanelClasses = cntl`
   sm:max-w-sm
   sm:ring-1
   sm:ring-gray-900/10
+  rounded-b-2xl
+  transform
+  transition-transform
+  ease-in-out
+  duration-300
 `;
 ---
 
@@ -117,9 +120,9 @@ const mobileMenuPanelClasses = cntl`
 <div id="mobile-menu" class={mobileMenuClasses} role="dialog" aria-modal="true">
   <!-- Background backdrop, show/hide based on slide-over state. -->
   <div class="fixed inset-0 z-50">
-    <div class={mobileMenuPanelClasses}>
+    <div id="menu-panel" class={mobileMenuPanelClasses}>
       <div class="flex items-center justify-between">
-        <a href="#" class="-m-1.5 p-1.5">
+        <a href="/" class="-m-1.5 p-1.5">
           <span class="sr-only">Heru Handika</span>
           <Icons />
         </a>
