--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,6 @@ import MainPage from "../components/MainPage.astro";
 import PageDescription from "../components/PageDescription.astro";
 import Image from "astro/components/Image.astro";
 import SocialMediaIcons from "../components/SocialMediaIcons.astro";
-import Link from "../components/Link.astro";
 
 const titleClasses = cntl`
   font-serif
@@ -77,7 +76,6 @@ const keywordClasses = cntl`
     px-4 
     text-sm
     font-semibold 
-    m-2
 `;
 
 const keywordList = [
@@ -147,10 +145,14 @@ const buttonClasses = cntl`
       <PageDescription>
         Post-Doctoral Associate · the University of Florida, USA
       </PageDescription>
-      <div class="mb-8 mt-4">
+      <div
+        class="flex flex-wrap justify-center gap-x-2 gap-y-2 sm:gap-x-4 px-2 mt-2"
+      >
         {
           keywordList.map((keyword) => (
-            <span class={keywordClasses}>{keyword}</span>
+            <div class={keywordClasses}>
+              <p class="text-center">{keyword}</p>
+            </div>
           ))
         }
       </div>
