Refactor code and add more photos.

--- a/src/components/cv/OutreachAndServices.astro
+++ b/src/components/cv/OutreachAndServices.astro
@@ -1,16 +1,15 @@
 ---
-import PageTitle from "../components/PageTitle.astro";
-import PageSubtitle from "../components/PageSubtitle.astro";
-import PopularArticle from "../components/pubs/PopularArticle.astro";
-import Events from "../components/Events.astro";
-import outreachIcon from "../assets/icons/outreach.svg";
-import Background from "../components/Background.astro";
+import PageTitle from "../../components/PageTitle.astro";
+import PageSubtitle from "../../components/PageSubtitle.astro";
+import PopularArticle from "../../components/pubs/PopularArticle.astro";
+import Events from "../../components/Events.astro";
+import outreachIcon from "../../assets/icons/outreach.svg";
+import Background from "../../components/Background.astro";
 import { Image } from "astro:assets";
-import mediaKeuangan from "../assets/img/hh-media-keuangan.webp";
-import kompasHogNosedRat from "../assets/img/hh-kompas-hyorhinomys.webp";
-import lsuOutreach from "../assets/img/hh-lsu_outreach.webp";
-import tamboraOutreach from "../assets/img/hh-tambora_outreach.webp";
-import lsuOutreach2 from "../assets/img/hh-lsu_outreach2.webp";
+import mediaKeuangan from "../../assets/img/hh-media-keuangan.webp";
+import kompasHogNosedRat from "../../assets/img/hh-kompas-hyorhinomys.webp";
+import tamboraOutreach from "../../assets/img/hh-tambora_outreach.webp";
+import lsuOutreach2 from "../../assets/img/hh-lsu_outreach2.webp";
 
 const outreachImages = [
   {
