--- a/src/components/cv/PublicationList.astro
+++ b/src/components/cv/PublicationList.astro
@@ -1,10 +1,12 @@
 ---
-import Published from "../components/pubs/Published.astro";
-import Publication from "../layouts/Publication.astro";
-import Forthcoming from "../components/pubs/Forthcoming.astro";
-import cvIcon from "../assets/icons/cv.svg";
-import PageTitle from "../components/PageTitle.astro";
-import Background from "../components/Background.astro";
+import Published from "../../components/pubs/Published.astro";
+import Publication from "../../layouts/Publication.astro";
+import Forthcoming from "../../components/pubs/Forthcoming.astro";
+import cvIcon from "../../assets/icons/cv.svg";
+import Background from "../../components/Background.astro";
+import PageTitle from "../PageTitle.astro";
+import hogNoseCover from "../../assets/img/hog-nose-jmamm_cover.webp";
+import Image from "astro/components/Image.astro";
 ---
 
 <div class="mx-auto h-full max-w-5xl py-6 sm:py-16 lg:py-8">
