--- a/src/components/github/CodeStats.astro
+++ b/src/components/github/CodeStats.astro
@@ -8,7 +8,7 @@ const codeStatsUrl = "https://githubcard.com/hhandika.svg?d=8fDRLgon";
   <h2
     class="text-2xl font-semibold text-center mb-4 text-chetwode-950 dark:text-chetwode-50"
   >
-    GitHub Code Stats
+    My GitHub Code Stats
   </h2>
   <div
     class="rounded-xl items-center justify-center overflow-hidden shadow-lg w-fit mx-auto"
